@@ -4,6 +4,7 @@
 : Fixed a bug that caused highlighting to break on activity pages
 : Fixed a bug that caused coupons not to display correctly on store pages
 : Fixed a bug that caused "Not Interested" tags to not show on continuous scrolling search results
+: Fixed a layout bug with regional price comparison on sale items
 
 
 v8.5
